# Parallel-Floyd-Marshall

./: .gitignore  CMakeLists.txt  ParallellFloyd-2DPipeline.sln  README.md  matrix.txt
CMakeProject/: .dockerignore  CMakeLists.txt  Dockerfile  docker_commands.md  options.json
CMakeProject/include/: Logger.h  Matrix.h
Floyd-WarshallMPI/: CMakeLists.txt  Dockerfile  docker_commands.md
Floyd-WarshallMPI/include/: Matrix.h
Floyd-WarshallMPI/samples/2/: matrix.txt
Floyd-WarshallMPI/samples/3/: matrix.txt
Floyd-WarshallMPI/samples/4/: matrix.txt_result_serial.txt
Floyd-WarshallMPI/src/: FloydWarshallMPI.cpp  GraphGenerator.cpp
Floyd-WarshallMPI/src/implementations/: ParallelFloydWarshall.cpp  SerialFloydWarshall.cpp
Floyd-WarshallMPI/src/options/: FloydOptions.cpp
FloydWarshallAllPairs/: FloydOptions.cpp  FloydWarshallAllPairs.cpp  FloydWarshallAllPairs.vcxproj  options.json
GraphGenerator/: GraphGenerator.cpp  GraphGenerator.vcxproj  main.cpp
Implementation/: Implementation.vcxitems  Implementation.vcxitems.filters  Logger.h  Matrix.h  ParallelFloydWarshall.cpp  SerialFloydWarshall.cpp
Infrastructure/: Infrastructure.vcxproj
ParallellFloyd-2DPipeline/: FloydWarshall.h  Logger.h  Matrix.h  ParallelFloydWarshall.cpp  ParallelFloydWarshall.h  ParallellFloyd-2DPipeline.cpp  ParallellFloyd-2DPipeline.vcxproj  ParallellFloydWarshall.cpp  ParallellFloydWarshall.h  SerialFloydWarshall.cpp  SerialFloydWarshall.h  commands.md  main.cpp  original.cpp  output_matrix.txt  settings.json  visualization.py
samples/: visualization.py
x64/Debug/: launch_gdb.bat  (+2 more)
(+69 files in other folders)
